# UO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  task.md  技术设计思路笔记.md
Zone/: AppMgr.h  CMakeLists.txt  main.cpp  stdafx.h
Zone/Actor/: Act.cpp  Act.h  Actor.cpp  Actor.h  ActorBase.cpp  ActorBase.h  ActorEquip.cpp  ActorEquip.h  ActorMgr.cpp  ActorMgr.h  ActorOwer.h  ActorSubCom.h  BaseAttr.cpp  BaseAttr.h  Observer.cpp  Observer.h
Zone/Ai/: ActStateMgr.cpp  ActStateMgr.h  ActionStateMgr.cpp  ActionStateMgr.h  Ai.cpp  Ai.h
Zone/Aoi/: Aoi.cpp  Aoi.h  GridIdxMgr.cpp  GridIdxMgr.h
Zone/Cfg/: CfgMgr.cpp  CfgMgr.h  comCfg.h  zoneCfg.h
Zone/Client/: AccMgr.cpp  AccMgr.h  ClientHandlers.cpp  NetState.cpp  NetState.h  Packets.cpp  Packets.h  ZoneAccMgr.cpp  ZoneAccMgr.h  ZoneClientMsgMgr.cpp  ZoneClientMsgMgr.h
Zone/Com/: ContextMenu.cpp  ContextMenu.h  ZoneMisc.cpp  ZoneMisc.h
Zone/Def/: ItemDef.h
Zone/DynamicCfg/: CfgMgr.h  DynCfgMgr.cpp  DynCfgMgr.h
Zone/Item/: Container.cpp  Container.h  Equip.cpp  Equip.h  Item.cpp  Item.h  ItemMgr.cpp  ItemMgr.h  ItemTool.cpp  ItemTool.h  ToolItem.cpp  ToolItem.h  Weapon.cpp  Weapon.h
Zone/Mgr/: AccMgr.cpp  AccMgr.h  CenterCon.cpp  CenterCon.h  EventMgr.h  GlobalEvent.h  InsEvent.h  NetState.cpp  NetState.h  ZoneClientMsgMgr.cpp  ZoneClientMsgMgr.h  ZoneMgr.cpp  ZoneMgr.h
Zone/Monster/: Monster.cpp  Monster.h  MonsterBase.cpp  MonsterBase.h  MonsterMgr.cpp  MonsterMgr.h  MonsterSubCom.cpp  MonsterSubCom.h
Zone/Npc/: Npc.cpp  Npc.h  NpcMgr.cpp  NpcMgr.h  NpcSubCom.cpp  NpcSubCom.h
Zone/Player/: ActorMgr.cpp  ActorMgr.h  BaseData.cpp  BaseData.h  LoginPlayer.cpp  LoginPlayer.h  Player.cpp  Player.h  PlayerDb.cpp  PlayerDb.h  PlayerMgr.cpp  PlayerMgr.h  PlayerScene.cpp  PlayerScene.h  PlayerSn.cpp  PlayerSn.h  ScenePlayer.cpp  ScenePlayer.h  SceneTran.cpp  SceneTran.h  (+2 more)
(+309 files in other folders)
